--- a/applicationServer/demo/src/main/resources/application.properties
+++ b/applicationServer/demo/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 spring.application.name=demo
-server.port =8082
+server.port =8080
 spring.datasource.url=jdbc:mysql://localhost:3306/curious_kids_quiz
 spring.datasource.username=root
 spring.datasource.password=
@@ -11,5 +11,7 @@ spring.jpa.properties.hibernate.format_sql=true
 #kids properties
 dataServer.baseUrl=http://localhost:5000
 dataServer.initDbUrl=/init/db
-staticFilesLocation=file:///C:/Users/windows/Documents/Ing2S1/SGBD/TP/static/
+staticFilesLocation=file:///C:/Users/Lenovo/Desktop/CuriousKids-Project/static/
+usersFilesLocation=file:///C:/Users/Lenovo/Desktop/CuriousKids-Project/static/users/
+virtualUsersImagesPath=/static/users/
 staticFilesMapping=/static/**
