--- a/applicationServer/demo/src/main/resources/application.properties
+++ b/applicationServer/demo/src/main/resources/application.properties
@@ -11,6 +11,8 @@ spring.jpa.properties.hibernate.format_sql=true
 #kids properties
 dataServer.baseUrl=http://localhost:5000
 dataServer.initDbUrl=/init/db
+dataServer.initFacesUrl=/init/faces
+dataServer.meetUserUrl=/meet
 staticFilesLocation=file:///C:/Users/windows/Documents/Ing2S1/SGBD/TP/static/
 usersFilesLocation=file:///C:/Users/windows/Documents/Ing2S1/SGBD/TP/static/users/
 virtualUsersImagesPath=/static/users/
